--- a/composite.ipynb
+++ b/composite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "28b66aa6",
    "metadata": {},
    "outputs": [],
@@ -21,16 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "01d5175d",
+   "execution_count": 8,
+   "id": "e91eb862",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "\n",
-    "# Note: The sub-module functions (calculate_professional_pps, calculate_consistency_with_form, etc.)\n",
-    "# are assumed to be defined as provided in the previous context. If needed, they can be included here.\n",
-    "# For correctness, we've ensured all column references match the data model exactly, with stripping for whitespace.\n",
     "\n",
     "def calculate_professional_pps(df_bat, df_bowl, df_league, df_player):\n",
     "    # --- 1. PRE-PROCESSING & LEVEL MAPPING ---\n",
@@ -409,76 +408,282 @@
     "    master['FIS_Score'] = master['FIS_Score'].clip(lower=SELECTION_BASE, upper=100)\n",
     "    # Return only the player master columns + the new FIS_Score\n",
     "    return master[list(df_player.columns) + ['FIS_Score']]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "89c0eb21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing sub-modules...\n",
+      "Finalizing weighted Overall_Score...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "def calculate_master_composite_score(df_bat, df_bowl, df_league, df_field, df_player):\n",
     "    \"\"\"\n",
-    "    Master module to compute the final composite score by integrating all 6 sub-modules.\n",
-    "    Updated for exact data model compatibility:\n",
-    "    - Column names match: e.g., 'match_id', 'playerid', 'Bowler_id', 'fielder_id', 'Player_id', etc.\n",
-    "    - Relationships enforced via merges on exact keys.\n",
-    "    - All DataFrames have columns stripped of leading/trailing spaces.\n",
-    "    - Weights: Equal (1/6) for balance; adjust if specific formula provided.\n",
-    "    - Final score clipped to 30-100.\n",
-    "    - Returns full player details + all sub-scores + Overall_Score, sorted descending.\n",
+    "    Master module to compute the final composite score with TUNED weights.\n",
+    "    Weights are contextually assigned based on the player's Role.\n",
     "    \"\"\"\n",
-    "    # Standardize all input DataFrames (strip column names)\n",
+    "    # Standardize all input DataFrames\n",
     "    for df in [df_bat, df_bowl, df_league, df_field, df_player]:\n",
     "        df.columns = [c.strip() for c in df.columns]\n",
     "\n",
-    "    # Step 1: Compute sub-scores (each returns a DF with Player_id and score)\n",
-    "    # PPS (Pressure Performance Score)\n",
-    "    pps_df = calculate_professional_pps(df_bat, df_bowl, df_league, df_player.copy())\n",
-    "    pps_df = pps_df[['Player_id', 'PPS_Score']]\n",
+    "    # --- Step 1: Compute sub-modules ---\n",
+    "    print(\"Executing sub-modules...\")\n",
+    "    pps_df = calculate_professional_pps(df_bat, df_bowl, df_league, df_player.copy())[['Player_id', 'PPS_Score']]\n",
+    "    cons_df = calculate_consistency_with_form(df_bat, df_bowl, df_player.copy())[['Player_id', 'Consistency_Score']]\n",
+    "    phase_df = calculate_phased_final(df_bat, df_bowl, df_player.copy())[['Player_id', 'Opening_Score', 'Middle_Score', 'Death_Score', 'Final_Phase_Score']]\n",
+    "    rsi_df = calculate_role_specific_impact(df_bat, df_bowl, df_player.copy())[['Player_id', 'RSI_Score']]\n",
+    "    tcs_df = calculate_tcs_final_optimized(df_bat, df_bowl, df_league, df_player.copy())[['Player_id', 'TCS_Score']]\n",
+    "    fis_df = calculate_fielding_impact_clutch(df_field, df_league, df_player.copy(), df_bat)[['Player_id', 'FIS_Score']]\n",
     "\n",
-    "    # Consistency Score\n",
-    "    cons_df = calculate_consistency_with_form(df_bat, df_bowl, df_player.copy())\n",
-    "    cons_df = cons_df[['Player_id', 'Consistency_Score']]\n",
-    "\n",
-    "    # Phase Scores (using Final_Phase_Score)\n",
-    "    phase_df = calculate_phased_final(df_bat, df_bowl, df_player.copy())\n",
-    "    phase_df = phase_df[['Player_id', 'Final_Phase_Score']]\n",
-    "\n",
-    "    # RSI (Role Specific Impact)\n",
-    "    rsi_df = calculate_role_specific_impact(df_bat, df_bowl, df_player.copy())\n",
-    "    rsi_df = rsi_df[['Player_id', 'RSI_Score']]\n",
-    "\n",
-    "    # TCS (Team Contribution Score)\n",
-    "    tcs_df = calculate_tcs_final_optimized(df_bat, df_bowl, df_league, df_player.copy())\n",
-    "    tcs_df = tcs_df[['Player_id', 'TCS_Score']]\n",
-    "\n",
-    "    # FIS (Fielding Impact Score)\n",
-    "    fis_df = calculate_fielding_impact_clutch(df_field, df_league, df_player.copy(), df_bat)\n",
-    "    fis_df = fis_df[['Player_id', 'FIS_Score']]\n",
-    "\n",
-    "    # Step 2: Merge all to master player DF\n",
+    "    # --- Step 2: Merge all scores ---\n",
     "    master = df_player.copy()\n",
     "    for score_df in [pps_df, cons_df, phase_df, rsi_df, tcs_df, fis_df]:\n",
     "        master = master.merge(score_df, on='Player_id', how='left')\n",
     "\n",
     "    # Fill NaN with baseline 30\n",
-    "    score_cols = ['PPS_Score', 'Consistency_Score', 'Final_Phase_Score', 'RSI_Score', 'TCS_Score', 'FIS_Score']\n",
-    "    master[score_cols] = master[score_cols].fillna(30)\n",
+    "    all_score_cols = ['PPS_Score', 'Consistency_Score', 'Opening_Score', 'Middle_Score', \n",
+    "                      'Death_Score', 'Final_Phase_Score', 'RSI_Score', 'TCS_Score', 'FIS_Score']\n",
+    "    master[all_score_cols] = master[all_score_cols].fillna(30)\n",
     "\n",
-    "    # Step 3: Weighted average for Overall_Score (equal weights)\n",
-    "    weights = {col: 1/6 for col in score_cols}\n",
-    "    master['Overall_Score'] = sum(master[col] * weights[col] for col in score_cols)\n",
-    "    master['Overall_Score'] = master['Overall_Score'].clip(lower=30, upper=100)\n",
+    "    # --- Step 3: Apply Tuned Weights ---\n",
+    "    # Weight Dictionary for the 6 Main Components\n",
+    "    def get_overall_score(row):\n",
+    "        role = str(row.get('Role', 'Batter')).lower()\n",
+    "        \n",
+    "        # All-Rounder Weighting (Balanced)\n",
+    "        if 'all' in role:\n",
+    "            w = {\n",
+    "                'RSI_Score': 0.20, \n",
+    "                'TCS_Score': 0.20, \n",
+    "                'Consistency_Score': 0.15, \n",
+    "                'PPS_Score': 0.15, \n",
+    "                'Final_Phase_Score': 0.15, \n",
+    "                'FIS_Score': 0.15\n",
+    "            }\n",
+    "        # Specialist (Batter/Bowler/WK) Weighting\n",
+    "        else:\n",
+    "            w = {\n",
+    "                'RSI_Score': 0.25, # Higher focus on role impact\n",
+    "                'TCS_Score': 0.25, # Higher focus on team contribution\n",
+    "                'Consistency_Score': 0.10, \n",
+    "                'PPS_Score': 0.15, \n",
+    "                'Final_Phase_Score': 0.15, \n",
+    "                'FIS_Score': 0.10\n",
+    "            }\n",
+    "            \n",
+    "        # Weighted calculation\n",
+    "        score = (row['PPS_Score'] * w['PPS_Score'] +\n",
+    "                 row['Consistency_Score'] * w['Consistency_Score'] +\n",
+    "                 row['Final_Phase_Score'] * w['Final_Phase_Score'] +\n",
+    "                 row['RSI_Score'] * w['RSI_Score'] +\n",
+    "                 row['TCS_Score'] * w['TCS_Score'] +\n",
+    "                 row['FIS_Score'] * w['FIS_Score'])\n",
+    "        return score\n",
     "\n",
-    "    # Step 4: Return sorted master\n",
-    "    return_cols = list(df_player.columns) + score_cols + ['Overall_Score']\n",
-    "    return master[return_cols].sort_values(by='Overall_Score', ascending=False)\n",
+    "    print(\"Finalizing weighted Overall_Score...\")\n",
+    "    master['Overall_Score'] = master.apply(get_overall_score, axis=1)\n",
+    "    master['Overall_Score'] = master['Overall_Score'].clip(lower=30, upper=100).round(2)\n",
     "\n",
-    "# Example Execution (load data and run - adjust paths if needed)\n",
-    "# Assuming CSVs are in current directory\n",
-    "# league = pd.read_csv('league.csv')\n",
-    "# new_batting = pd.read_csv('new_batting.csv')\n",
-    "# new_bowling = pd.read_csv('new_bowling.csv')\n",
-    "# new_fielding = pd.read_csv('new_fielding.csv')\n",
-    "# player_details = pd.read_csv('player_details.csv')\n",
-    "# master_leaderboard = calculate_master_composite_score(new_batting, new_bowling, league, new_fielding, player_details)\n",
-    "print(f\"Total players: {len(master_leaderboard)}\")\n",
-    "print(master_leaderboard.head().to_string(index=False))"
+    "    # --- Step 4: Export to CSV ---\n",
+    "    return_cols = list(df_player.columns) + all_score_cols + ['Overall_Score']\n",
+    "    final_df = master[return_cols].sort_values(by='Overall_Score', ascending=False)\n",
+    "    final_df.to_csv('composite_score.csv', index=False)\n",
+    "    \n",
+    "    return final_df\n",
+    "\n",
+    "# EXECUTION\n",
+    "master_leaderboard = calculate_master_composite_score(new_batting, new_bowling, league, new_fielding, player_details)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a6229afe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aggregation complete. File saved as 'final_player_rankings_with_stats.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def aggregate_and_merge_stats(composite_file, batting_file, bowling_file):\n",
+    "    # --- 1. Load the analytical results ---\n",
+    "    df_composite = pd.read_csv(composite_file)\n",
+    "    df_composite.columns = [c.strip() for c in df_composite.columns]\n",
+    "    \n",
+    "    # --- 2. Aggregate Batting Performance ---\n",
+    "    df_bat = pd.read_csv(batting_file)\n",
+    "    df_bat.columns = [c.strip() for c in df_bat.columns]\n",
+    "    \n",
+    "    # Calculate dismissals (Not out vs out)\n",
+    "    df_bat['is_out'] = df_bat['Out Type'].apply(lambda x: 0 if str(x).lower().strip() == 'not out' else 1)\n",
+    "    \n",
+    "    bat_agg = df_bat.groupby('playerid').agg({\n",
+    "        'Runs': 'sum',\n",
+    "        'Balls': 'sum',\n",
+    "        'fours': 'sum',\n",
+    "        'sixes': 'sum',\n",
+    "        'is_out': 'sum',\n",
+    "        'match_id': 'nunique'\n",
+    "    }).reset_index()\n",
+    "    \n",
+    "    # Derived Metrics\n",
+    "    bat_agg['Batting_Avg'] = (bat_agg['Runs'] / bat_agg['is_out'].replace(0, np.nan)).round(2)\n",
+    "    bat_agg['Batting_SR'] = (bat_agg['Runs'] / bat_agg['Balls'] * 100).round(2)\n",
+    "    \n",
+    "    # Rename for final merge\n",
+    "    bat_agg = bat_agg.rename(columns={\n",
+    "        'playerid': 'Player_id',\n",
+    "        'Runs': 'Total_Runs',\n",
+    "        'match_id': 'Innings_Batted',\n",
+    "        'fours': 'Total_4s',\n",
+    "        'sixes': 'Total_6s'\n",
+    "    })\n",
+    "\n",
+    "    # --- 3. Aggregate Bowling Performance ---\n",
+    "    df_bowl = pd.read_csv(bowling_file)\n",
+    "    df_bowl.columns = [c.strip() for c in df_bowl.columns]\n",
+    "    \n",
+    "    bowl_agg = df_bowl.groupby('Bowler_id').agg({\n",
+    "        'Wickets': 'sum',\n",
+    "        'Runs': 'sum',\n",
+    "        'balls': 'sum',\n",
+    "        'Dots': 'sum',\n",
+    "        'matchId': 'nunique'\n",
+    "    }).reset_index()\n",
+    "    \n",
+    "    # Derived Metrics\n",
+    "    # Bowling Avg = Runs / Wickets\n",
+    "    bowl_agg['Bowling_Avg'] = (bowl_agg['Runs'] / bowl_agg['Wickets'].replace(0, np.nan)).round(2)\n",
+    "    # Economy = Runs / (Balls/6)\n",
+    "    bowl_agg['Bowling_Econ'] = (bowl_agg['Runs'] / (bowl_agg['balls'] / 6)).round(2)\n",
+    "    # Strike Rate = Balls / Wickets\n",
+    "    bowl_agg['Bowling_SR'] = (bowl_agg['balls'] / bowl_agg['Wickets'].replace(0, np.nan)).round(2)\n",
+    "    \n",
+    "    # Rename for final merge\n",
+    "    bowl_agg = bowl_agg.rename(columns={\n",
+    "        'Bowler_id': 'Player_id',\n",
+    "        'Wickets': 'Total_Wickets',\n",
+    "        'Runs': 'Runs_Conceded',\n",
+    "        'matchId': 'Matches_Bowled',\n",
+    "        'balls': 'Balls_Bowled'\n",
+    "    })\n",
+    "\n",
+    "    # --- 4. Merge All into Composite Score ---\n",
+    "    # Merge batting\n",
+    "    final_df = df_composite.merge(bat_agg[['Player_id', 'Innings_Batted', 'Total_Runs', 'Batting_Avg', 'Batting_SR', 'Total_4s', 'Total_6s']], \n",
+    "                                  on='Player_id', how='left')\n",
+    "    \n",
+    "    # Merge bowling\n",
+    "    final_df = final_df.merge(bowl_agg[['Player_id', 'Matches_Bowled', 'Total_Wickets', 'Bowling_Avg', 'Bowling_Econ', 'Bowling_SR']], \n",
+    "                              on='Player_id', how='left')\n",
+    "\n",
+    "    # Fill NaNs for players who didn't bat or bowl in any match\n",
+    "    fill_cols = ['Innings_Batted', 'Total_Runs', 'Total_4s', 'Total_6s', 'Matches_Bowled', 'Total_Wickets']\n",
+    "    final_df[fill_cols] = final_df[fill_cols].fillna(0)\n",
+    "\n",
+    "    # Reorder columns to put traditional stats before the analytical scores for readability\n",
+    "    # Get metadata columns\n",
+    "    meta_cols = ['Player_id', 'Player_name', 'Team', 'Role', 'Level', 'Nationality', 'Auction_price']\n",
+    "    # Filter to only include meta columns that exist\n",
+    "    meta_cols = [c for c in meta_cols if c in final_df.columns]\n",
+    "    \n",
+    "    # Define score columns\n",
+    "    score_cols = [c for c in final_df.columns if '_Score' in c]\n",
+    "    \n",
+    "    # Define stat columns\n",
+    "    stat_cols = ['Innings_Batted', 'Total_Runs', 'Batting_Avg', 'Batting_SR', 'Matches_Bowled', 'Total_Wickets', 'Bowling_Avg', 'Bowling_Econ']\n",
+    "    \n",
+    "    # Combine and export\n",
+    "    final_cols = meta_cols + stat_cols + [c for c in final_df.columns if c not in meta_cols + stat_cols + score_cols] + score_cols\n",
+    "    final_df = final_df[final_cols]\n",
+    "    \n",
+    "    final_df.to_csv('final_player_rankings_with_stats.csv', index=False)\n",
+    "    print(\"Aggregation complete. File saved as 'final_player_rankings_with_stats.csv'\")\n",
+    "    return final_df\n",
+    "\n",
+    "# To run the code:\n",
+    "final_data = aggregate_and_merge_stats('composite_score.csv', 'new_batting.csv', 'new_bowling.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9070552d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Unpivot complete. File saved as player_scores_long.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read your file (change filename if needed)\n",
+    "df = pd.read_csv(\"final_output.csv\")\n",
+    "\n",
+    "# Columns that should remain fixed\n",
+    "id_cols = ['Player_name', 'Level', 'Role']\n",
+    "\n",
+    "# Score columns to unpivot\n",
+    "score_cols = [\n",
+    "    'Consistency_Score',\n",
+    "    'FIS_Score',\n",
+    "    'TCS_Score',\n",
+    "    'RSI_Score',\n",
+    "    'PPS_Score',\n",
+    "    'Final_Phase_Score'\n",
+    "]\n",
+    "\n",
+    "# Unpivot (melt)\n",
+    "df_long = pd.melt(\n",
+    "    df,\n",
+    "    id_vars=id_cols,\n",
+    "    value_vars=score_cols,\n",
+    "    var_name='Metric',\n",
+    "    value_name='Score'\n",
+    ")\n",
+    "\n",
+    "# Optional: clean metric names\n",
+    "df_long['Metric'] = df_long['Metric'].str.replace('_Score', '').str.replace('_', ' ')\n",
+    "\n",
+    "# Save for Power BI / Excel\n",
+    "df_long.to_csv(\"player_scores_long.csv\", index=False)\n",
+    "\n",
+    "print(\"✅ Unpivot complete. File saved as player_scores_long.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f53ada58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -488,7 +693,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   }
  },
